<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.berit.myapp.MainActivity">

    <item
        android:id="@+id/menu_maptype"
        android:title="@string/menu_maptype">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/menu_maptype_normal"
                    android:title="@string/menu_maptype_normal"
                    android:checked="true"/>
                <item android:id="@+id/menu_maptype_hybrid"
                    android:title="@string/menu_maptype_hybrid"/>
                <item android:id="@+id/menu_maptype_satellite"
                    android:title="@string/menu_maptype_satellite"/>
                <item android:id="@+id/menu_maptype_terrain"
                    android:title="@string/menu_maptype_terrain"/>
                <item android:id="@+id/menu_maptype_none"
                    android:title="@string/menu_maptype_none"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
